Update description of dataset to match hollywood

--- a/notebooks/demo/mg_louvain.ipynb
+++ b/notebooks/demo/mg_louvain.ipynb
@@ -52,8 +52,8 @@
    "source": [
     "The Hollywood dataset is in our S3 bucket and zipped.  \n",
     "1. We'll need to create a folder for our data in the `/data` folder\n",
-    "1. Download the zipped data into that folder from S3 (it will take some time as it it 6GB)\n",
-    "1. Decompress the zipped data for use (it will take some time as it it 26GB)"
+    "1. Download the zipped data into that folder from S3 (it will take some time as it is 300MB)\n",
+    "1. Decompress the zipped data for use (it will take some time as it is 1.6GB)"
    ]
   },
   {
