--- a/notebooks/community/Louvain.ipynb
+++ b/notebooks/community/Louvain.ipynb
@@ -14,6 +14,7 @@
     "| Brad Rees     | 08/01/2019 | created          | 0.6             |                       |\n",
     "|               | 08/16/2020 | updated          | 0.14            | GV100, CUDA 10.2      |\n",
     "|               | 08/05/2021 | tested / updated | 21.10 nightly   | RTX 3090 CUDA 11.4    |\n",
+    "| Ralph Liu     | 06/22/2022 | tested/updated   | 22.08           | TV100, CUDA 11.5      |\n",
     "\n",
     "\n",
     "RAPIDS release 21.06 does not support Pascal, release 21.08 solved the issue and Pascal is supported again \n",
@@ -142,34 +143,17 @@
    "source": [
     "# Import needed libraries\n",
     "import cugraph\n",
-    "import cudf"
+    "import cudf\n",
+    "\n",
+    "# Import a built-in dataset\n",
+    "from cugraph.experimental.datasets import karate"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Read data using cuDF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test file    \n",
-    "datafile='../data//karate-data.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# read the data using cuDF\n",
-    "gdf = cudf.read_csv(datafile, delimiter='\\t', names=['src', 'dst'], dtype=['int32', 'int32'] )"
+    "## Create an Edgelist"
    ]
   },
   {
@@ -178,6 +162,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gdf = karate.get_edgelist()\n",
+    "\n",
     "# The algorithm also requires that there are vertex weights.  Just use 1.0 \n",
     "gdf[\"data\"] = 1.0"
    ]
