--- a/notebooks/community/Spectral-Clustering.ipynb
+++ b/notebooks/community/Spectral-Clustering.ipynb
@@ -12,12 +12,12 @@
     "Notebook Credits\n",
     "* Original Authors: Bradley Rees and James Wyles\n",
     "* Created:   08/01/2019\n",
-    "* Last Edit: 08/16/2020\n",
+    "* Last Edit: 06/22/2022\n",
     "\n",
     "RAPIDS Versions: 0.14\n",
     "\n",
     "Test Hardware\n",
-    "* GV100 32G, CUDA 10.2\n",
+    "* Tesla V100 32G, CUDA 11.5\n",
     "\n"
    ]
   },
@@ -152,7 +152,10 @@
     "# Import needed libraries\n",
     "import cugraph\n",
     "import cudf\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "# Import a built-in dataset\n",
+    "from cugraph.experimental.datasets import karate"
    ]
   },
   {
