--- a/notebooks/community/ktruss.ipynb
+++ b/notebooks/community/ktruss.ipynb
@@ -13,7 +13,7 @@
     "Notebook Credits\n",
     "* Original Authors: Bradley Rees\n",
     "* Created:   10/28/2019\n",
-    "* Last Edit: 08/13/2021\n",
+    "* Last Edit: 06/22/2022\n",
     "\n",
     "\n",
     "## Introduction\n",
@@ -99,14 +99,17 @@
    "source": [
     "# Import needed libraries\n",
     "import cugraph\n",
-    "import cudf"
+    "import cudf\n",
+    "\n",
+    "# Import a built-in dataset\n",
+    "from cugraph.experimental.datasets import karate"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read data using cuDF"
+    "### Create a Graph"
    ]
   },
   {
@@ -115,29 +118,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test file    \n",
-    "datafile='../data//karate-data.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# read the data using cuDF\n",
-    "gdf = cudf.read_csv(datafile, delimiter='\\t', names=['src', 'dst'], dtype=['int32', 'int32'] )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create a Graph \n",
-    "G = cugraph.Graph()\n",
-    "G.from_cudf_edgelist(gdf, source='src', destination='dst')"
+    "# Create a graph using the imported Dataset object\n",
+    "G = karate.get_graph()"
    ]
   },
   {
