--- a/notebooks/centrality/Katz.ipynb
+++ b/notebooks/centrality/Katz.ipynb
@@ -11,13 +11,13 @@
     "Notebook Credits\n",
     "* Original Authors: Bradley Rees\n",
     "* Created:   10/15/2019\n",
-    "* Last Edit: 08/16/2020\n",
+    "* Last Edit: 06/22/2022\n",
     "\n",
-    "RAPIDS Versions: 0.14   \n",
+    "RAPIDS Versions: 0.15  \n",
     "\n",
     "Test Hardware\n",
     "\n",
-    "* GV100 32G, CUDA 10.2\n"
+    "* Tesla V100 32G, CUDA 11.5\n"
    ]
   },
   {
@@ -45,9 +45,9 @@
     "            this value is 0.0f, cuGraph will use the default value which is 0.00001. \n",
     "            Setting too small a tolerance can lead to non-convergence due to numerical \n",
     "            roundoff. Usually values between 0.01 and 0.00001 are acceptable.\n",
-    "    nstart:cuDataFrame, GPU Dataframe containing the initial guess for katz centrality. \n",
+    "    nstart: cuDataFrame, GPU Dataframe containing the initial guess for katz centrality. \n",
     "            Default is None\n",
-    "    normalized:bool, If True normalize the resulting katz centrality values.  \n",
+    "    normalized: bool, If True normalize the resulting katz centrality values.  \n",
     "            Default is True\n",
     "\n",
     "Returns:\n",
@@ -112,7 +112,10 @@
    "source": [
     "# Import needed libraries\n",
     "import cugraph\n",
-    "import cudf"
+    "import cudf\n",
+    "\n",
+    "# Import a built-in dataset\n",
+    "from cugraph.experimental.datasets import karate"
    ]
   },
   {
@@ -144,35 +147,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define the path to the test data  \n",
-    "datafile='../data/karate-data.csv'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Read in the data - GPU\n",
-    "cuGraph depends on cuDF for data loading and the initial Dataframe creation\n",
-    "\n",
-    "The data file contains an edge list, which represents the connection of a vertex to another.  The `source` to `destination` pairs is in what is known as Coordinate Format (COO).  In this test case, the data is just two columns.  However a third, `weight`, column is also possible"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf = cudf.read_csv(datafile, delimiter='\\t', names=['src', 'dst'], dtype=['int32', 'int32'] )"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -185,9 +159,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a Graph using the source (src) and destination (dst) vertex pairs from the Dataframe \n",
-    "G = cugraph.Graph()\n",
-    "G.from_cudf_edgelist(gdf, source='src', destination='dst')"
+    "# Create a graph using the imported Dataset object\n",
+    "G = karate.get_graph()"
    ]
   },
   {
@@ -302,6 +275,7 @@
    "outputs": [],
    "source": [
     "# Read the data, this also created a NetworkX Graph \n",
+    "datafile = \"../datasets/karate-data.csv\"\n",
     "file = open(datafile, 'rb')\n",
     "Gnx = nx.read_edgelist(file)"
    ]
